--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "firebase": "^9.13.0",
     "mermaid": "^9.1.7",
     "sirv-cli": "^2.0.0"
   }
