--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.0.0",
+    "svelte-spa-router": "^3.3.0",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
